# mlops_mini_pipeline

./: .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
fastapi_app/: main.py  mlflow.db
fastapi_app/templates/: index.html
models/: .gitignore  vectorizer.pkl
notebooks/: mlflow.db  tfidf_vs_count.ipynb
reports/: experiment_info.json
src/: data_ingestion.py  features_engineering.py  preprocessing.py
src/modeling/: model_building.py  model_evaluation.py  model_registry.py  prodcution_trans.py  production_trans.py
tests/: testing.py
